fixed the FAB div that was overlapping with the main divs

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -89,7 +89,7 @@ border-radius:50%;
 -webkit-border-radius:50%;
 width:500px;
 position: fixed;
-left: 23rem;
+left: 25rem;
 top: 2rem;
 animation: spin 15s ease-in-out infinite;
 z-index: -1;
@@ -105,7 +105,7 @@ border-radius:50%;
 -webkit-border-radius:50%;
 width:500px;
 position: fixed;
-left: 23rem;
+left: 25rem;
 top: 2rem;
 border-color: #09383E transparent;
 animation: spin2 15s ease-in-out infinite;
@@ -181,4 +181,8 @@ i.material-icons{
 .btn-floating{
   box-shadow: none !important;
   border: none !important;
+}
+
+div.fixed-action-btn{
+  height: 3rem;
 }
